testsuite/escript/errors/errors004-reserved-word-as-argument-name.err2
errors004-reserved-word-as-argument-name.src:3:13: error: Did not expect reserved word 'downto' in this context.